#25 Fix WorkflowGraph overflow

--- a/crud-editor/src/components/WorkflowGraph/WorkflowGraph.less
+++ b/crud-editor/src/components/WorkflowGraph/WorkflowGraph.less
@@ -1,6 +1,5 @@
 .oc-fsm-crud-editor--workflow-graph {
   background-size: 10px 10px;
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,10 +16,11 @@
 
 .oc-fsm-crud-editor--workflow-graph__legend {
   position: absolute;
-  bottom: 8px;
-  right: 8px;
+  bottom: 24px;
+  right: 24px;
   display: flex;
   flex-direction: column;
+  z-index: 10;
 }
 
 
